Creando el servicio y el componente

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,12 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">PeliculasApp</h1>
+    <p class="lead">ESTA ES UNA APLICACION DE PELÍCULAS.</p>
+  </div>
+</div>
+
+<div class="card-columns">
+  <div class="card" *ngFor="let movie of moviPopular">
+    <img src="..." class="card-img-top" alt="..." />
+  </div>
+</div>
