--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,8 +5,54 @@
   </div>
 </div>
 
+<div class="container">
+  <br>
+  <h1>Cartelera</h1>
+  <hr>
+
+  <div class="row">
+
+    <div class=" col-sm-6">
+      <div class="row">
+        <div class="col-md-12 div-pic-1"
+          [ngStyle]=" {'background-image': 'url(http://image.tmdb.org/t/p/w500/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)'}">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6 div-pic-2"
+          [ngStyle]=" {'background-image': 'url(http://image.tmdb.org/t/p/w500/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)'}">
+        </div>
+        <div class="col-sm-6 div-pic-2"
+          [ngStyle]=" {'background-image': 'url(http://image.tmdb.org/t/p/w500/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)'}">
+        </div>
+      </div>
+
+    </div>
+
+    <div class=" col-sm-6">
+      <div class="row">
+        <div class="col-sm-6 div-pic-2"
+          [ngStyle]=" {'background-image': 'url(http://image.tmdb.org/t/p/w500/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)'}">
+        </div>
+        <div class="col-sm-6 div-pic-2"
+          [ngStyle]=" {'background-image': 'url(http://image.tmdb.org/t/p/w500/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)'}">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 div-pic-1"
+          [ngStyle]=" {'background-image': 'url(http://image.tmdb.org/t/p/w500/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)'}">
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+<!-- 
 <div class="card-columns">
   <div class="card" *ngFor="let movie of moviPopular">
-    <img src="..." class="card-img-top" alt="..." />
+    <img src="" class="card-img-top" alt="..." />
   </div>
-</div>
+</div> -->
