--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
   <a class="navbar-brand" href="#">
-    <img src="assets/img/MovieApplogo.png" width="200" height="70" alt="logo de movieapp">
+    <img src="../../../../assets/img/MovieApplogo.png" width="200" height="70" alt="logo de movieapp">
   </a>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
