--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,53 +7,12 @@
 
 <div class="container">
   <br>
-  <h1>Cartelera</h1>
-  <hr>
 
-  <div class="row" *ngIf="movieCartelera">
+  <app-galeria [peliculas]="movieCartelera|slice:0:6" titulo="Peliculas en Cartelera"></app-galeria>
 
-    <div class=" col-sm-6">
+  <app-galeria [peliculas]="moviPopular|slice:0:6" titulo="Populares"></app-galeria>
+  <app-galeria [peliculas]="moviPopularKids|slice:0:6" titulo="Populares entre los mas pequeños"></app-galeria>
 
-      <div class="row">
-        <div class="col-md-12 div-pic-1"
-          [ngStyle]=" {'background-image': 'url( '+ ( movieCartelera[0] | movieImage ) +')'}">
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="col-sm-6 div-pic-2"
-          [ngStyle]=" {'background-image': 'url('+ ( movieCartelera[1] | movieImage ) +')'}">
-        </div>
-        <div class="col-sm-6 div-pic-2"
-          [ngStyle]=" {'background-image': 'url('+ ( movieCartelera[2] | movieImage ) +')'}">
-        </div>
-      </div>
-
-    </div>
-
-    <div class=" col-sm-6">
-      <div class="row">
-        <div class="col-sm-6 div-pic-2"
-          [ngStyle]=" {'background-image': 'url('+ ( movieCartelera[3] | movieImage ) +')'}">
-        </div>
-        <div class="col-sm-6 div-pic-2"
-          [ngStyle]=" {'background-image': 'url('+ ( movieCartelera[4] | movieImage ) +')'}">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 div-pic-1"
-          [ngStyle]=" {'background-image': 'url('+ ( movieCartelera[5] | movieImage ) +')'}">
-        </div>
-      </div>
-    </div>
-
-  </div>
 
 </div>
-
-<!-- 
-<div class="card-columns">
-  <div class="card" *ngFor="let movie of moviPopular">
-    <img src="" class="card-img-top" alt="..." />
-  </div>
-</div> -->
