--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,14 @@
-<p>
-  search works!
-</p>
+<div class="container main-container">
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <label>Buscar:</label>
+        <input [(ngModel)]="buscar" name="buscar" (keyup.enter)="buscarPelicula()" type="text" class="form-control"
+          placeholder="¿Que pelicula deseas buscar?">
+      </div>
+
+    </div>
+  </div>
+
+</div>
