--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,27 +1,26 @@
 <div class="container main-container">
 
-  <div class="row">
-    <div class="col-md-12">
-      <div class="form-group">
-        <label>Buscar:</label>
-        <input [(ngModel)]="buscar" name="buscar" (keyup.enter)="buscarPelicula()" type="text" class="form-control"
-          placeholder="¿Que pelicula deseas buscar?">
-      </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label>Buscar:</label>
+                <input [(ngModel)]='buscar' name='buscar' (keyup.enter)="buscarPeliculas()" type="text" class="form-control" placeholder="¿Que pelicula deseas buscar?">
+            </div>
 
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="card-columns">
-      <div class="card" *ngFor=" let pelicula of serviceMovie.peliculas">
-        <img [src]="pelicula | movieImage" class="card-img-top" [alt]="pelicula">
-        <div class="card-body">
-          <h5 class="card-title">{{pelicula.original_title}}</h5>
-          <p class="card-text text-justify">{{pelicula.overview | slice:0:250}}...</p>
-          <button type="button" class="btn-outline-primary btn-block"> Ver mas ...</button>
         </div>
-      </div>
     </div>
-  </div>
+
+    <div class="row">
+        <div class="card-columns">
+            <div class="card" *ngFor=" let pelicula of serviceMovie.peliculas">
+                <img [src]="pelicula | movieImage" class="card-img-top" [alt]="pelicula">
+                <div class="card-body">
+                    <h5 class="card-title">{{pelicula.original_title}}</h5>
+                    <p class="card-text text-justify">{{pelicula.overview | slice:0:250}}...</p>
+                    <button type="button" class="btn-outline-primary btn-block"> Ver mas ...</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
