ultimos detalles de el componente pelicula

--- a/src/app/components/pelicula/pelicula.component.html
+++ b/src/app/components/pelicula/pelicula.component.html
@@ -24,7 +24,7 @@
                 <br> Voto promedio: <span class="badge badge-primary">{{movie.vote_average}}</span>
             </p>
 
-            <button [routerLink]="['/'+regresarA]" type="button" class="btn btn-outline-danger">
+            <button [routerLink]="['/'+regresarA,'search']" type="button" class="btn btn-outline-danger">
                 Regresar
             </button>
 
